# kafka-mcp

./: Dockerfile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
src/kafka-mcp/: main.py
src/kafka-mcp/connections/: kafka.py
src/kafka-mcp/tools/: admin.py  cluster.py  consumer.py  producer.py
src/kafka_mcp/: main.py
src/kafka_mcp/configs/: config.py
src/kafka_mcp/connections/: kafka.py
src/kafka_mcp/tools/: admin.py  cluster.py  consumer.py  producer.py
