[project]
name = "kafka-mcp"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.13.0",
    "fastmcp>=3.0.0",
]

[project.scripts]
kafka-mcp = "kafka_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"